# pop-sdk

./: README.md  pyproject.toml  setup.py
pop/: cli.py  delta.py  engine.py  guards.py  structures.py  templates.py
pop_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
