[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pop-sdk"
version = "0.1.1"
description = "Process-Oriented Programming (POP) SDK for Python"
readme = "README.md"
authors = [
  { name="Do Huy Hoang", email="dohuyhoangvn93@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/dohuyhoang93/pop-sdk"
"Bug Tracker" = "https://github.com/dohuyhoang93/pop-sdk/issues"
